[project]
name = "infinity_sdk"
version = "0.1.0-dev4"
dependencies = [
    "sqlglot==11.7.1",
    "pydantic",
    "thrift",
    "setuptools",
    "pytest",
    "pandas",
    "numpy",
    "pyarrow",
    "openpyxl",
    "polars"
]
description = "infinity"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
