[project]
name = "infinity_sdk"
version = "0.1.0"
dependencies = [
    "sqlglot==11.7.1",
    "pydantic",
    "thrift",
    "setuptools",
    "pytest",
    "pandas",
    "numpy",
    "pyarrow",
    "openpyxl",
    "polars"
]
description = "infinity"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers =[
    "L0",
    "L1",
    "L2",
    "L3",
    "complex",
    "slow",
    "nightly",
]


filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::ResourceWarning",
#    "ignore::thrift.transport.TTransport",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]